--- a/src/renderer/index.css
+++ b/src/renderer/index.css
@@ -3,9 +3,26 @@
     padding: 0;
 }
 
+body {
+    overflow: hidden;
+}
+
 canvas {
     position: absolute;
     display: block;
     left: 0;
     top: 0;
+    z-index: 0;
+}
+
+#messageText {
+    position: absolute;
+    left: 15px;
+    top: 130px;
+    width: 180px;
+    height: 70px;
+    font-family: sans-serif;
+    overflow-wrap: break-word;
+    word-break: break-all;
+    z-index: 1;
 }
